# microROS2_PIO_Template

./: .gitignore  README.md
pio_ws/: platformio.ini
raspberry_pi_ws/install/: local_setup.sh  setup.sh
raspberry_pi_ws/install/ngetestyahbot/lib/ngetestyahbot/: stm_counter
raspberry_pi_ws/install/ngetestyahbot/share/ngetestyahbot/: local_setup.sh  package.ps1  package.sh
raspberry_pi_ws/log/: latest_build
ros2_ws/package_test/: CMakeLists.txt
ros2_ws/package_test/src/: stm_counter.cpp
stm32_ws/: platformio.ini
stm32_ws/.devcontainer/: devcontainer.json
stm32_ws/src/: ctype_fix.c  main.cpp
